--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4",
     "zxcvbn": "^4.4.2"
   },
