--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "react-markdown": "^10.1.0",
     "react-plotly.js": "^2.6.0",
