--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -95,6 +95,6 @@ uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
 wcwidth==0.2.13
-xgboost==3.0.0
+#xgboost==3.0.0
 xxhash==3.5.0
 zstandard==0.23.0
